frontend/tests/errors/ER-001/missing_semicolon/test.vx
// @rfc: docs/vexel-rfc.md#errors--diagnostics
// @desc: Syntax errors are reported as compile-time errors | Syntax error: missing semicolon after statement


&^main() -> #i32 {
    // Obvious syntax error: incomplete expression
    1 + ;
}
